<resources>
    <string name="banner_ad_ga_unit_id" translatable="false">ca-app-pub-2870168293382158/7950570922</string>
    <string name="banner_ad_sa_unit_id" translatable="false">ca-app-pub-2870168293382158/9000455374</string>
    <string name="banner_ad_ca_unit_id" translatable="false">ca-app-pub-2870168293382158/8639364851</string>
    <string name="banner_ad_ua_unit_id" translatable="false">ca-app-pub-2870168293382158/2328450838</string>
    <string name="banner_ad_ta_unit_id" translatable="false">ca-app-pub-2870168293382158/8858996327</string>
    <string name="banner_ad_te_unit_id" translatable="false">ca-app-pub-2870168293382158/6461376771</string>
    <string name="banner_ad_tl_unit_id" translatable="false">ca-app-pub-2870168293382158/6112240020</string>
    <string name="banner_ad_mt_unit_id" translatable="false">ca-app-pub-2870168293382158/5764432261</string>
    <string name="banner_ad_tu_unit_id" translatable="false">ca-app-pub-2870168293382158/9617166922</string>
    <string name="banner_ad_wb_unit_id" translatable="false">ca-app-pub-2870168293382158/6393373250</string>
    <string name="app_name" translatable="false">C.A.T.S. City Calculator</string>
    <string name="last_screenshot_file_name" translatable="false">last_screenshot.PNG</string>
    <string name="stub_car1_file_name" translatable="false">stub_car1.jpg</string>
    <string name="stub_car2_file_name" translatable="false">stub_car2.jpg</string>
    <string name="stub_car3_file_name" translatable="false">stub_car3.jpg</string>
    <string name="file_list_cars" translatable="false">Cars</string>
    <string name="start_game_at">Start game</string>
    <string name="end_game_at">End game</string>
    <string name="name_car">Car name</string>
    <string name="name_car_colon">Car name:</string>
    <string name="health">Health</string>
    <string name="health_colon">Health:</string>
    <string name="attack">Attack</string>
    <string name="attack_colon">Attack:</string>
    <string name="repair">Repair</string>
    <string name="repair_colon">Repair:</string>
    <string name="building">Building</string>
    <string name="building_colon">Building:</string>
    <string name="set_free_and_repair">Set free / repair</string>
    <string name="time_reparing_hhmmss">Repairing time HH:MM:SS (without ":")</string>
    <string name="uuid">User UID</string>
    <string name="uuid_colon">User UID:</string>
    <string name="usernic">User Nic</string>
    <string name="usernic_colon">User Nic:</string>
    <string name="username">User Name</string>
    <string name="username_colon">User Name:</string>
    <string name="useremail">User Email</string>
    <string name="useremail_colon">User Email:</string>
    <string name="team">Team</string>
    <string name="team_colon">Team:</string>
    <string name="role">Role</string>
    <string name="role_colon">Role:</string>
    <string name="leaderuid">Lider UID</string>
    <string name="leaderuid_colon">Lider UID:</string>
    <string name="plus_us">+ us</string>
    <string name="time">Time</string>
    <string name="plus_they">+ them</string>
    <string name="score_us">Our score</string>
    <string name="for_instance">Score for early win</string>
    <string name="score_they">They score</string>
    <string name="sync_to_screenshot_time">Sync with screenshot time</string>
    <string name="start">start!</string>
    <string name="time_or_instance">Time / Early win</string>
    <string name="status_us">Our status</string>
    <string name="status_game">Game status</string>
    <string name="status_they">They status</string>
    <string name="result">Result</string>
    <string name="settings">Settings</string>
    <string name="open_screenshot">Open screenshot</string>
    <string name="open_login">User account</string>
    <string name="set_screenshot_folder">Select screenshot folder</string>
    <string name="about_us">About</string>
    <string name="exit">Exit</string>
    <string name="sett_screenshot_folder">screenshot folder</string>
    <string name="sett_listen_files_in_screenshot_folder">Listen files in screenshot folder</string>
    <string name="debug_mode">Debug mode</string>
    <string name="sett_calibrate_center_screen">Calibrate screenshot center</string>
    <string name="sett_strategy">Strategy</string>
    <string name="sett_language">Language</string>
    <string name="sett_reset_to_zero">Reset to 0</string>
    <string name="program_depricated">Program is out of date</string>
    <string name="read_external_storage">Read External Storage</string>
    <string name="write_external_storage">Write External Storage</string>
    <string name="internet">Internet</string>
    <string name="you_need_to_grant_access_to">You need to grant access to</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="all_perm_is_granted">All Permission is Granted</string>
    <string name="some_perm_is_denied">Some Permission is Denied</string>
    <string name="we_instance_win">We won ahead of schedule with a difference</string>
    <string name="we_instance_lose">We lost early with a difference</string>
    <string name="instance_nowinner">Early draw</string>
    <string name="we_win">We won with a difference</string>
    <string name="we_lost">We lost with a difference</string>
    <string name="nowin">Draw</string>
    <string name="we_will_instance_win_with_diff_in">We will win early with a difference</string>
    <string name="we_will_instance_lose_with_diff_in">We will lose early with a difference</string>
    <string name="points">points</string>
    <string name="after">after</string>
    <string name="will_instance_nowin_after">Will early draw via</string>
    <string name="we_will_win_with_diff_in">We will win with a difference</string>
    <string name="we_will_lose_with_diff_in">We will lose with a difference</string>
    <string name="will_nowin">Will draw</string>
    <string name="error_entered_data">Error data</string>
    <string name="offset_center_x">Offset the center of the screenshot along the vertical axis</string>
    <string name="offset_center_y">Offset the center of the screenshot along the horizontal axis</string>
    <string name="sett_borders">Borders settings</string>
    <string name="borders_car_in_city_box1" translatable="false">Car In City Box1</string>
    <string name="borders_car_in_city_box2" translatable="false">Car In City Box2</string>
    <string name="borders_car_in_city_statebox1" translatable="false">Car In City Statebox1</string>
    <string name="borders_car_in_city_statebox2" translatable="false">Car In City Statebox2</string>
    <string name="borders_car_in_city_statebox3" translatable="false">Car In City Statebox3</string>
    <string name="borders_car_in_city_info" translatable="false">Car In City Info</string>
    <string name="borders_car_in_city_building" translatable="false">Car In City Building</string>
    <string name="borders_car_in_city_picture" translatable="false">Car In City Picture</string>
    <string name="borders_car_in_garage_picture" translatable="false">Car In Garage Picture</string>
    <string name="borders_car_in_city_slot1" translatable="false">Car In City Slot 1</string>
    <string name="borders_car_in_city_slot2" translatable="false">Car In City Slot 2</string>
    <string name="borders_car_in_city_slot3" translatable="false">Car In City Slot 3</string>
    <string name="borders_car_in_garage_slot1" translatable="false">Car In Garage Slot 1</string>
    <string name="borders_car_in_garage_slot2" translatable="false">Car In Garage Slot 2</string>
    <string name="borders_car_in_garage_slot3" translatable="false">Car In Garage Slot 3</string>
    <string name="borders_car_in_city_health" translatable="false">Car In City Health</string>
    <string name="borders_car_in_city_shield" translatable="false">Car In City Shield</string>
    <string name="borders_car_in_garage_health" translatable="false">Car In Garage Health</string>
    <string name="borders_car_in_garage_shield" translatable="false">Car In Garage Shield</string>
    <string name="borders_car_in_city_state" translatable="false">Car In City State</string>
    <string name="borders_car_in_city_healbox" translatable="false">Car In City Health Box</string>
    <string name="borders_car_in_city_timebox1" translatable="false">Car In City Time Box1</string>
    <string name="borders_car_in_city_timebox2" translatable="false">Car In City Time Box2</string>
    <string name="borders_box_info_city" translatable="false">Box Info City</string>
    <string name="borders_box_info_car" translatable="false">Box Info Car</string>
    <string name="borders_box_info_garage" translatable="false">Box Info Garage</string>
    <string name="borders_box_back" translatable="false">Box Back</string>
    <string name="borders_city" translatable="false">City</string>
    <string name="borders_time" translatable="false">Time</string>
    <string name="borders_scores_to_early_win" translatable="false">Scores to early win</string>
    <string name="borders_our_scores" translatable="false">Our scores</string>
    <string name="borders_enemy_scores" translatable="false">Enemy\'s scores</string>
    <string name="borders_our_team_name" translatable="false">Our team name</string>
    <string name="borders_enemy_team_name" translatable="false">Enemy\'s team name</string>
    <string name="borders_blt" translatable="false">Building left-top (BLT)</string>
    <string name="borders_blt_name" translatable="false">BLT name</string>
    <string name="borders_blt_slots" translatable="false">BLT slots</string>
    <string name="borders_blt_progress" translatable="false">BLT progress</string>
    <string name="borders_blc" translatable="false">Building left-center (BLC)</string>
    <string name="borders_blc_name" translatable="false">BLC name</string>
    <string name="borders_blc_slots" translatable="false">BLC slots</string>
    <string name="borders_blc_progress" translatable="false">BLC progress</string>
    <string name="borders_blb" translatable="false">Building left-bottom (BLB)</string>
    <string name="sett_colors">Colors detect settings</string>
    <string name="red" translatable="false">RED</string>
    <string name="green" translatable="false">GREEN</string>
    <string name="blue" translatable="false">BLUE</string>
    <string name="minus_threshold">Minus threshold</string>
    <string name="plus_threshold">Plus threshold</string>
    <string name="color_stub" translatable="false">██████████</string>
    <string name="original_picture">Original picture</string>
    <string name="processed_picture">Processed picture</string>
    <string name="recognized_symbols">Recognized symbols</string>
    <string name="color_code">RGB code</string>
    <string name="sett_default">Set default</string>
    <string name="pref_languageInterfaceAreaName">Interface Language</string>
    <string name="pref_languageInterfaceAreaName_default_value">en</string>
    <string name="pref_languageInterfaceAreaName_summary">English</string>
    <string name="pref_languageScreenshotAreaName">Screenshot Language</string>
    <string name="pref_languageScreenshotAreaName_default_value">eng</string>
    <string name="pref_languageScreenshotAreaName_summary">English</string>
    <string name="loading">Loading...</string>
    <string name="version">version</string>
    <string name="final_symbols">Final symbols</string>
    <string name="listen_custom_data_folder">Listen custom data folder</string>
    <string name="select_custom_data_folder">Select custom data folder</string>
    <string name="listen_whatsapp_data_folder">Listen whatsapp data folder</string>
    <string name="select_whatsapp_data_folder">Select whatsapp data folder</string>
    <string name="listen_telegram_data_folder">Listen telegram data folder</string>
    <string name="select_telegram_data_folder">Select telegram data folder</string>
</resources>