<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".activities.SplashActivity">

    <TextView
        android:id="@+id/tv_sp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        />

    <ImageView
        android:id="@+id/iv_sp_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:src="@drawable/cats_city_calc_icon"/>

    <TextView
        android:id="@+id/tv_sp_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:text="@string/version"
        />

    <TextView
        android:id="@+id/tv_sp_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/loading"
        />

</LinearLayout>