<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_main_open_settings"
        android:orderInCategory="1"
        android:title="@string/settings" />
    <item
        android:id="@+id/menu_main_open_screenshot"
        android:orderInCategory="2"
        android:title="@string/open_screenshot" />
    <item
        android:id="@+id/menu_main_user_account"
        android:orderInCategory="3"
        android:title="@string/open_login" />
    <item
        android:id="@+id/menu_main_share"
        android:orderInCategory="4"
        android:title="Share" />
    <item
        android:id="@+id/menu_main_login"
        android:orderInCategory="5"
        android:title="Login" />

    <item
        android:id="@+id/menu_main_logout"
        android:orderInCategory="6"
        android:title="Logout" />

    <item
        android:id="@+id/menu_main_email_verification_send"
        android:orderInCategory="7"
        android:title="Send email verification" />

    <item
        android:id="@+id/menu_main_email_verification_check"
        android:orderInCategory="8"
        android:title="Check email verification" />

    <item
        android:id="@+id/menu_main_team_manage"
        android:orderInCategory="9"
        android:title="Manage Team" />

    <item
        android:id="@+id/menu_main_team_create"
        android:orderInCategory="10"
        android:title="Create Team" />

    <item
        android:id="@+id/menu_main_team_leave"
        android:orderInCategory="11"
        android:title="Leave Team" />

    <item
        android:id="@+id/menu_main_team_find"
        android:orderInCategory="12"
        android:title="Find Team" />

</menu>